unpackaged/main/default/objects/Search_Synonym__mdt/Search_Synonym__mdt.object-meta.xml
<CustomObject>
    <label>Search Synonym</label>
    <pluralLabel>Search Synonyms</pluralLabel>
</CustomObject>