unpackaged/main/default/objects/Search_Synonym__mdt/fields/Bidirectional__c.field-meta.xml
<CustomField>
    <fullName>Bidirectional__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When true (default), every term in the group (Term + Synonyms) expands to every other — searching any one finds all. When false, only the Term expands to its synonyms, not the reverse.</description>
    <label>Bidirectional</label>
    <type>Checkbox</type>
</CustomField>