unpackaged/main/default/objects/Search_Synonym__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Custom metadata records can&#39;t be deleted via the Apex Metadata API, so the Admin Console &quot;deletes&quot; a synonym by unchecking this. Search ignores inactive rows.</description>
    <inlineHelpText>Uncheck to stop this synonym group from expanding searches. Unchecked rows are ignored by the help center search.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>