unpackaged/main/default/objects/Search_Synonym__mdt/fields/Synonyms__c.field-meta.xml
<CustomField>
    <fullName>Synonyms__c</fullName>
    <description>Comma-separated synonym terms (lowercase). Multi-word synonyms (e.g. &quot;sign in&quot;) expand into their significant tokens (&quot;sign&quot;; &quot;in&quot; is a stopword). Each is searched with the same 3+ char wildcard rule and scored at the synonym multiplier relative to the original term.</description>
    <label>Synonyms</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>