unpackaged/main/default/objects/Search_Synonym__mdt/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>A query token (lowercase). When a search contains this token, its synonyms are OR&#39;d into recall and scored at the synonym multiplier. Multi-word entries are reduced to their significant tokens at load time.</description>
    <label>Term</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>